# payroll-manager

./: .gitignore  CLAUDE.md  README.md  WORK.md  blog_claude_md_optimization.md  blog_excel_import_refactoring.md  blog_payroll_automation.md  blog_삽질10선.md  create_icon.py  create_shortcut.bat  create_shortcut.vbs  create_tistory_shortcut.vbs  index.html  make_shortcut.ps1  make_shortcut.py  neuro-coach.code-workspace  package-lock.json  package.json  payroll_structure.json  script.js  style.css  tistory_batch_post.py  tistory_config.json  tistory_post.py  tistory_uploader.py  upload_blog_series.py  쿠우쿠우부평점_202601.xlsx
.claude/: settings.local.json
docs/: .bkit-memory.json  .pdca-status.json  blog-cascade-delete.md  blog-code-tables.md  blog-post.md  blog-retirement-tax-2026.md  blog-send-history.md
edi-automation/: .env.example  .gitignore  EXECUTION_FLOW.md  INSTALLATION_COMPLETE.md  QUICKSTART.md  README.md  WORKFLOW.md  main.py  requirements.txt  test-login-output.txt
payroll-automation/: pyproject.toml  requirements.txt
payroll-automation/src/payroll_automation/: __init__.py  __main__.py  cli.py
payroll-automation/src/payroll_automation/calculators/: __init__.py  retirement.py
payroll-automation/src/payroll_automation/config/: __init__.py  loader.py  schema.py
payroll-automation/src/payroll_automation/excel/: __init__.py  mapper.py  reader.py
payroll-automation/src/payroll_automation/reports/: __init__.py  acquisition.py  loss.py
payroll-automation/src/payroll_automation/validators/: __init__.py  wage_validator.py
payroll-manager/: AGENTS.md  (+4 more)
(+169 files in other folders)
